# hlox

./: .hlint.yaml  LICENSE  flake.nix  hie.yaml  hlox.cabal  justfile
app/: Main.hs
golden/: booleans  comments  keywords  numbers  operators  strings
golden/parser/: arithmetic_equality  multi_equality  statements
golden/parser_stmt/: statements
src/: HLox.hs
src/HLox/: Interpreter.hs  Parser.hs  Pretty.hs  Resolver.hs  Scanner.hs  Types.hs  Util.hs
src/HLox/Interpreter/: Environment.hs  Types.hs
src/HLox/Parser/: Types.hs
src/HLox/Resolver/: Types.hs
src/HLox/Scanner/: Types.hs
test/HLox/Interpreter/: Test.hs
test/HLox/Parser/: Test.hs
test/HLox/Resolver/: Test.hs
test/HLox/Scanner/: Test.hs
