cabal-version:      3.4
name:               hlox
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Markus Hauck
maintainer:         markus1189@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options: -Wall -threaded
    default-language: GHC2021
    default-extensions: LambdaCase
                      , OverloadedStrings
                      , TemplateHaskell
                      , TupleSections
                      , ViewPatterns

library
    import:           options
    exposed-modules:  HLox
                    , HLox.Scanner
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , filepath
                    , lens ^>=5.3.0
                    , monad-loops
                    , mtl
                    , streaming
                    , text
                    , transformers
                    , unordered-containers
                    , containers
    hs-source-dirs:   src

executable hlox
    import:           options
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        hlox

    hs-source-dirs:   app
    default-language: GHC2021

test-suite hlox-test
    import:           options
    default-language: GHC2021
    other-modules:    HLox.Scanner.Test
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:            Driver.hs
    build-depends:     base ^>=4.18.2.1
                     , aeson
                     , aeson-pretty
                     , filepath
                     , hlox
                     , hspec
                     , lens
                     , tasty
                     , tasty-discover
                     , tasty-golden
                     , tasty-hspec
                     , text
    build-tool-depends: tasty-discover:tasty-discover
    other-modules:      HLox.Scanner.Test
