cabal-version:      3.4
name:               hlox
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Markus Hauck
maintainer:         markus1189@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common deps
    build-depends:   containers
                   , either
                   , exceptions
                   , extra
                   , filepath
                   , formatting
                   , hashtables
                   , lens ^>=5.3.0
                   , monad-loops
                   , mtl
                   , streaming
                   , string-conversions
                   , string-interpolate
                   , text
                   , time
                   , transformers
                   , unordered-containers
                   , uuid
                   , vector


common options
    ghc-options: -Wall -threaded -Werror=incomplete-patterns
    default-language: GHC2021
    default-extensions: FunctionalDependencies
                      , LambdaCase
                      , LambdaCase
                      , OverloadedStrings
                      , QuasiQuotes
                      , TemplateHaskell
                      , TupleSections
                      , TypeFamilies
                      , ViewPatterns

library
    import:           options
    import:           deps
    exposed-modules:  HLox
                    , HLox.Interpreter
                    , HLox.Interpreter.Environment
                    , HLox.Interpreter.Types
                    , HLox.Parser
                    , HLox.Parser.Types
                    , HLox.Pretty
                    , HLox.Resolver
                    , HLox.Resolver.Types
                    , HLox.Scanner
                    , HLox.Scanner.Types
                    , HLox.Types
                    , HLox.Util
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , containers
                    , either
                    , exceptions
                    , extra
                    , filepath
                    , formatting
                    , lens ^>=5.3.0
                    , monad-loops
                    , mtl
                    , streaming
                    , string-conversions
                    , string-interpolate
                    , text
                    , transformers
                    , unordered-containers
                    , vector
    hs-source-dirs:   src

executable hlox
    import:           options
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        hlox

    hs-source-dirs:   app
    default-language: GHC2021

test-suite hlox-test
    import:           options
    import:           deps
    default-language: GHC2021
    other-modules:    HLox.Interpreter.Test
                    , HLox.Parser.Test
                    , HLox.Scanner.Test
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:            Driver.hs
    build-depends:     base ^>=4.18.2.1
                     , aeson
                     , aeson-pretty
                     , hlox
                     , hspec
                     , tasty
                     , tasty-discover
                     , tasty-golden
                     , tasty-hspec
    build-tool-depends: tasty-discover:tasty-discover
    other-modules:      HLox.Scanner.Test
